--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Tue Nov 20 16:05:06 2018</p>
+         Last Run: Tue Nov 20 17:05:03 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Practice - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Wednesday Nov 21, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -50,7 +50,7 @@
                         <td>0</td>
                         <td>14</td>
                         <td>SSW</td>
-                        <td>64</td>
+                        <td>62</td>
                      </tr>
                      <tr>
                         <td>11:00 PM</td>
@@ -58,11 +58,11 @@
                         <td>1</td>
                         <td>-3</td>
                         <td>1</td>
-                        <td>70</td>
+                        <td>69</td>
                         <td>0</td>
                         <td>14</td>
                         <td>SSW</td>
-                        <td>68</td>
+                        <td>67</td>
                      </tr>
                   </tbody>
                </table>
@@ -173,7 +173,7 @@
                "data":[
                  "59",
                  "67",
-                 "70"
+                 "69"
                ]
              },
              {
@@ -183,8 +183,8 @@
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
                  "62",
-                 "64",
-                 "68"
+                 "62",
+                 "67"
                ]
              }
            ]
@@ -224,7 +224,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Tue Nov 20 16:05:06 2018</p>
+         Last Run: Tue Nov 20 17:05:03 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. Blizzard SC02 - Foothills Boardwalk Field</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Nov 24, 2018 -  1:00PM til  2:30PM</H4>
                <table class="table table-striped">
@@ -245,51 +245,51 @@
                   <tbody>
                      <tr>
                         <td>12:00 PM</td>
-                        <td>Partly Cloudy</td>
+                        <td>Mostly Cloudy</td>
                         <td>-1</td>
                         <td>-4</td>
-                        <td>6</td>
-                        <td>62</td>
+                        <td>4</td>
+                        <td>65</td>
                         <td>1</td>
                         <td>8</td>
-                        <td>NNW</td>
-                        <td>44</td>
+                        <td>N</td>
+                        <td>72</td>
                      </tr>
                      <tr>
                         <td>01:00 PM</td>
-                        <td>Clear</td>
+                        <td>Partly Cloudy</td>
                         <td>0</td>
                         <td>-3</td>
-                        <td>3</td>
-                        <td>58</td>
+                        <td>4</td>
+                        <td>59</td>
                         <td>1</td>
                         <td>8</td>
-                        <td>NNE</td>
-                        <td>24</td>
+                        <td>SE</td>
+                        <td>50</td>
                      </tr>
                      <tr>
                         <td>02:00 PM</td>
-                        <td>Clear</td>
+                        <td>Partly Cloudy</td>
                         <td>1</td>
                         <td>-2</td>
-                        <td>3</td>
+                        <td>4</td>
                         <td>55</td>
                         <td>0</td>
                         <td>8</td>
                         <td>E</td>
-                        <td>12</td>
+                        <td>38</td>
                      </tr>
                      <tr>
                         <td>03:00 PM</td>
-                        <td>Clear</td>
+                        <td>Partly Cloudy</td>
                         <td>0</td>
                         <td>-3</td>
                         <td>4</td>
-                        <td>56</td>
+                        <td>57</td>
                         <td>0</td>
                         <td>10</td>
-                        <td>E</td>
-                        <td>12</td>
+                        <td>ESE</td>
+                        <td>38</td>
                      </tr>
                   </tbody>
                </table>
@@ -391,9 +391,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "6",
-                 "3",
-                 "3",
+                 "4",
+                 "4",
+                 "4",
                  "4"
                ]
              },
@@ -403,10 +403,10 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "62",
-                 "58",
+                 "65",
+                 "59",
                  "55",
-                 "56"
+                 "57"
                ]
              },
              {
@@ -415,10 +415,10 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "44",
-                 "24",
-                 "12",
-                 "12"
+                 "72",
+                 "50",
+                 "38",
+                 "38"
                ]
              }
            ]
@@ -458,7 +458,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Tue Nov 20 16:05:06 2018</p>
+         Last Run: Tue Nov 20 17:05:03 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Nov 25, 2018 - 12:30PM til  2:00PM</H4>
                <table class="table table-striped">
@@ -483,7 +483,7 @@
                         <td>0</td>
                         <td>-3</td>
                         <td>2</td>
-                        <td>59</td>
+                        <td>60</td>
                         <td>1</td>
                         <td>8</td>
                         <td>W</td>
@@ -494,11 +494,11 @@
                         <td>Partly Cloudy</td>
                         <td>1</td>
                         <td>-2</td>
-                        <td>2</td>
-                        <td>54</td>
+                        <td>3</td>
+                        <td>55</td>
                         <td>1</td>
                         <td>8</td>
-                        <td>W</td>
+                        <td>WNW</td>
                         <td>43</td>
                      </tr>
                      <tr>
@@ -506,11 +506,11 @@
                         <td>Partly Cloudy</td>
                         <td>2</td>
                         <td>0</td>
-                        <td>2</td>
-                        <td>52</td>
+                        <td>3</td>
+                        <td>53</td>
                         <td>0</td>
                         <td>8</td>
-                        <td>WNW</td>
+                        <td>NW</td>
                         <td>42</td>
                      </tr>
                   </tbody>
@@ -610,8 +610,8 @@
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
                  "2",
-                 "2",
-                 "2"
+                 "3",
+                 "3"
                ]
              },
              {
@@ -620,9 +620,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "59",
-                 "54",
-                 "52"
+                 "60",
+                 "55",
+                 "53"
                ]
              },
              {
@@ -673,7 +673,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Tue Nov 20 16:05:06 2018</p>
+         Last Run: Tue Nov 20 17:05:03 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Monday Nov 26, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -694,39 +694,39 @@
                   <tbody>
                      <tr>
                         <td>09:00 PM</td>
-                        <td>Mostly Cloudy</td>
-                        <td>-2</td>
-                        <td>-6</td>
-                        <td>3</td>
-                        <td>73</td>
+                        <td>Overcast</td>
+                        <td>-3</td>
+                        <td>-7</td>
+                        <td>4</td>
+                        <td>75</td>
                         <td>0</td>
                         <td>10</td>
                         <td>SW</td>
-                        <td>68</td>
+                        <td>85</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
-                        <td>Mostly Cloudy</td>
-                        <td>-2</td>
-                        <td>-6</td>
-                        <td>3</td>
-                        <td>73</td>
+                        <td>Overcast</td>
+                        <td>-3</td>
+                        <td>-7</td>
+                        <td>4</td>
+                        <td>76</td>
                         <td>0</td>
                         <td>10</td>
                         <td>SW</td>
-                        <td>70</td>
+                        <td>85</td>
                      </tr>
                      <tr>
                         <td>11:00 PM</td>
-                        <td>Mostly Cloudy</td>
-                        <td>-2</td>
-                        <td>-6</td>
-                        <td>3</td>
-                        <td>74</td>
+                        <td>Overcast</td>
+                        <td>-3</td>
+                        <td>-7</td>
+                        <td>4</td>
+                        <td>77</td>
                         <td>0</td>
                         <td>10</td>
                         <td>SW</td>
-                        <td>74</td>
+                        <td>84</td>
                      </tr>
                   </tbody>
                </table>
@@ -753,9 +753,9 @@
                "pointColor":"rgba(92,0,141,1)",
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
-                 "-6",
-                 "-6",
-                 "-6"
+                 "-7",
+                 "-7",
+                 "-7"
                ]
              },
              {
@@ -765,9 +765,9 @@
                "pointColor":"rgba(252,49,18,1)",
                "backgroundColor":"rgba(252,49,18,0)",
                "data":[
-                 "-2",
-                 "-2",
-                 "-2"
+                 "-3",
+                 "-3",
+                 "-3"
                ]
              }
            ]
@@ -824,9 +824,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "3",
-                 "3",
-                 "3"
+                 "4",
+                 "4",
+                 "4"
                ]
              },
              {
@@ -835,9 +835,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "73",
-                 "73",
-                 "74"
+                 "75",
+                 "76",
+                 "77"
                ]
              },
              {
@@ -846,9 +846,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "68",
-                 "70",
-                 "74"
+                 "85",
+                 "85",
+                 "84"
                ]
              }
            ]
