--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Tue Nov 20 17:05:03 2018</p>
+         Last Run: Tue Nov 20 18:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Practice - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Wednesday Nov 21, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -36,7 +36,7 @@
                         <td>1</td>
                         <td>59</td>
                         <td>0</td>
-                        <td>16</td>
+                        <td>14</td>
                         <td>SSW</td>
                         <td>62</td>
                      </tr>
@@ -224,7 +224,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Tue Nov 20 17:05:03 2018</p>
+         Last Run: Tue Nov 20 18:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. Blizzard SC02 - Foothills Boardwalk Field</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Nov 24, 2018 -  1:00PM til  2:30PM</H4>
                <table class="table table-striped">
@@ -249,11 +249,11 @@
                         <td>-1</td>
                         <td>-4</td>
                         <td>4</td>
-                        <td>65</td>
+                        <td>64</td>
                         <td>1</td>
                         <td>8</td>
                         <td>N</td>
-                        <td>72</td>
+                        <td>71</td>
                      </tr>
                      <tr>
                         <td>01:00 PM</td>
@@ -265,7 +265,7 @@
                         <td>1</td>
                         <td>8</td>
                         <td>SE</td>
-                        <td>50</td>
+                        <td>49</td>
                      </tr>
                      <tr>
                         <td>02:00 PM</td>
@@ -273,10 +273,10 @@
                         <td>1</td>
                         <td>-2</td>
                         <td>4</td>
-                        <td>55</td>
+                        <td>56</td>
                         <td>0</td>
                         <td>8</td>
-                        <td>E</td>
+                        <td>ESE</td>
                         <td>38</td>
                      </tr>
                      <tr>
@@ -289,7 +289,7 @@
                         <td>0</td>
                         <td>10</td>
                         <td>ESE</td>
-                        <td>38</td>
+                        <td>37</td>
                      </tr>
                   </tbody>
                </table>
@@ -403,9 +403,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "65",
+                 "64",
                  "59",
-                 "55",
+                 "56",
                  "57"
                ]
              },
@@ -415,10 +415,10 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "72",
-                 "50",
+                 "71",
+                 "49",
                  "38",
-                 "38"
+                 "37"
                ]
              }
            ]
@@ -458,7 +458,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Tue Nov 20 17:05:03 2018</p>
+         Last Run: Tue Nov 20 18:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Nov 25, 2018 - 12:30PM til  2:00PM</H4>
                <table class="table table-striped">
@@ -483,7 +483,7 @@
                         <td>0</td>
                         <td>-3</td>
                         <td>2</td>
-                        <td>60</td>
+                        <td>59</td>
                         <td>1</td>
                         <td>8</td>
                         <td>W</td>
@@ -620,7 +620,7 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "60",
+                 "59",
                  "55",
                  "53"
                ]
@@ -673,7 +673,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Tue Nov 20 17:05:03 2018</p>
+         Last Run: Tue Nov 20 18:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Monday Nov 26, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -722,7 +722,7 @@
                         <td>-3</td>
                         <td>-7</td>
                         <td>4</td>
-                        <td>77</td>
+                        <td>76</td>
                         <td>0</td>
                         <td>10</td>
                         <td>SW</td>
@@ -837,7 +837,7 @@
                "data":[
                  "75",
                  "76",
-                 "77"
+                 "76"
                ]
              },
              {
