--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Tue Nov 20 23:05:02 2018</p>
+         Last Run: Wed Nov 21 00:05:04 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Practice - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Wednesday Nov 21, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -38,7 +38,7 @@
                         <td>0</td>
                         <td>16</td>
                         <td>SSW</td>
-                        <td>70</td>
+                        <td>69</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
@@ -46,11 +46,11 @@
                         <td>2</td>
                         <td>-2</td>
                         <td>1</td>
-                        <td>62</td>
+                        <td>61</td>
                         <td>0</td>
                         <td>16</td>
                         <td>SSW</td>
-                        <td>64</td>
+                        <td>62</td>
                      </tr>
                      <tr>
                         <td>11:00 PM</td>
@@ -62,7 +62,7 @@
                         <td>0</td>
                         <td>14</td>
                         <td>SSW</td>
-                        <td>68</td>
+                        <td>67</td>
                      </tr>
                   </tbody>
                </table>
@@ -172,7 +172,7 @@
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
                  "57",
-                 "62",
+                 "61",
                  "66"
                ]
              },
@@ -182,9 +182,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "70",
-                 "64",
-                 "68"
+                 "69",
+                 "62",
+                 "67"
                ]
              }
            ]
@@ -224,7 +224,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Tue Nov 20 23:05:02 2018</p>
+         Last Run: Wed Nov 21 00:05:04 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. Blizzard SC02 - Foothills Boardwalk Field</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Nov 24, 2018 -  1:00PM til  2:30PM</H4>
                <table class="table table-striped">
@@ -245,15 +245,15 @@
                   <tbody>
                      <tr>
                         <td>12:00 PM</td>
-                        <td>Mostly Cloudy</td>
-                        <td>-1</td>
-                        <td>-4</td>
+                        <td>Partly Cloudy</td>
+                        <td>-2</td>
+                        <td>-5</td>
                         <td>4</td>
-                        <td>64</td>
+                        <td>66</td>
                         <td>1</td>
                         <td>8</td>
-                        <td>N</td>
-                        <td>71</td>
+                        <td>SSE</td>
+                        <td>58</td>
                      </tr>
                      <tr>
                         <td>01:00 PM</td>
@@ -261,35 +261,35 @@
                         <td>0</td>
                         <td>-3</td>
                         <td>4</td>
-                        <td>59</td>
+                        <td>61</td>
                         <td>1</td>
                         <td>8</td>
-                        <td>SE</td>
-                        <td>50</td>
-                     </tr>
-                     <tr>
-                        <td>02:00 PM</td>
-                        <td>Partly Cloudy</td>
-                        <td>1</td>
-                        <td>-2</td>
-                        <td>4</td>
-                        <td>56</td>
-                        <td>0</td>
-                        <td>8</td>
-                        <td>ESE</td>
+                        <td>SSE</td>
                         <td>38</td>
                      </tr>
                      <tr>
-                        <td>03:00 PM</td>
-                        <td>Partly Cloudy</td>
+                        <td>02:00 PM</td>
+                        <td>Clear</td>
                         <td>0</td>
                         <td>-3</td>
                         <td>4</td>
-                        <td>58</td>
+                        <td>59</td>
+                        <td>0</td>
+                        <td>8</td>
+                        <td>SSE</td>
+                        <td>25</td>
+                     </tr>
+                     <tr>
+                        <td>03:00 PM</td>
+                        <td>Clear</td>
+                        <td>0</td>
+                        <td>-3</td>
+                        <td>4</td>
+                        <td>61</td>
                         <td>0</td>
                         <td>10</td>
-                        <td>ESE</td>
-                        <td>37</td>
+                        <td>SE</td>
+                        <td>21</td>
                      </tr>
                   </tbody>
                </table>
@@ -317,9 +317,9 @@
                "pointColor":"rgba(92,0,141,1)",
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
-                 "-4",
+                 "-5",
                  "-3",
-                 "-2",
+                 "-3",
                  "-3"
                ]
              },
@@ -330,9 +330,9 @@
                "pointColor":"rgba(252,49,18,1)",
                "backgroundColor":"rgba(252,49,18,0)",
                "data":[
-                 "-1",
+                 "-2",
                  "0",
-                 "1",
+                 "0",
                  "0"
                ]
              }
@@ -403,10 +403,10 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "64",
+                 "66",
+                 "61",
                  "59",
-                 "56",
-                 "58"
+                 "61"
                ]
              },
              {
@@ -415,10 +415,10 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "71",
-                 "50",
+                 "58",
                  "38",
-                 "37"
+                 "25",
+                 "21"
                ]
              }
            ]
@@ -458,7 +458,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Tue Nov 20 23:05:02 2018</p>
+         Last Run: Wed Nov 21 00:05:04 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Nov 25, 2018 - 12:30PM til  2:00PM</H4>
                <table class="table table-striped">
@@ -483,23 +483,23 @@
                         <td>0</td>
                         <td>-3</td>
                         <td>2</td>
-                        <td>60</td>
+                        <td>61</td>
                         <td>1</td>
                         <td>8</td>
                         <td>W</td>
-                        <td>44</td>
+                        <td>49</td>
                      </tr>
                      <tr>
                         <td>01:00 PM</td>
                         <td>Partly Cloudy</td>
                         <td>1</td>
                         <td>-2</td>
-                        <td>4</td>
-                        <td>55</td>
+                        <td>2</td>
+                        <td>57</td>
                         <td>1</td>
                         <td>8</td>
                         <td>WNW</td>
-                        <td>43</td>
+                        <td>48</td>
                      </tr>
                      <tr>
                         <td>02:00 PM</td>
@@ -507,11 +507,11 @@
                         <td>2</td>
                         <td>0</td>
                         <td>3</td>
-                        <td>53</td>
+                        <td>55</td>
                         <td>0</td>
                         <td>8</td>
                         <td>NW</td>
-                        <td>42</td>
+                        <td>47</td>
                      </tr>
                   </tbody>
                </table>
@@ -610,7 +610,7 @@
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
                  "2",
-                 "4",
+                 "2",
                  "3"
                ]
              },
@@ -620,9 +620,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "60",
-                 "55",
-                 "53"
+                 "61",
+                 "57",
+                 "55"
                ]
              },
              {
@@ -631,9 +631,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "44",
-                 "43",
-                 "42"
+                 "49",
+                 "48",
+                 "47"
                ]
              }
            ]
@@ -673,7 +673,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Tue Nov 20 23:05:02 2018</p>
+         Last Run: Wed Nov 21 00:05:04 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Monday Nov 26, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -697,36 +697,36 @@
                         <td>Overcast</td>
                         <td>-3</td>
                         <td>-7</td>
-                        <td>4</td>
-                        <td>74</td>
+                        <td>3</td>
+                        <td>73</td>
                         <td>0</td>
                         <td>10</td>
                         <td>SW</td>
-                        <td>86</td>
+                        <td>85</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
                         <td>Overcast</td>
                         <td>-3</td>
                         <td>-7</td>
-                        <td>4</td>
+                        <td>3</td>
                         <td>75</td>
                         <td>0</td>
                         <td>10</td>
                         <td>SW</td>
-                        <td>86</td>
+                        <td>84</td>
                      </tr>
                      <tr>
                         <td>11:00 PM</td>
                         <td>Overcast</td>
                         <td>-3</td>
                         <td>-7</td>
-                        <td>4</td>
-                        <td>76</td>
+                        <td>3</td>
+                        <td>75</td>
                         <td>0</td>
                         <td>10</td>
                         <td>SW</td>
-                        <td>85</td>
+                        <td>84</td>
                      </tr>
                   </tbody>
                </table>
@@ -824,9 +824,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "4",
-                 "4",
-                 "4"
+                 "3",
+                 "3",
+                 "3"
                ]
              },
              {
@@ -835,9 +835,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "74",
+                 "73",
                  "75",
-                 "76"
+                 "75"
                ]
              },
              {
@@ -846,9 +846,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "86",
-                 "86",
-                 "85"
+                 "85",
+                 "84",
+                 "84"
                ]
              }
            ]
